--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "html-to-text": "^9.0.5",
+    "string-strip-html": "^13.4.3",
+    "strip-html": "^1.0.2",
+    "striptags": "^3.2.0",
     "updaty": "^1.0.0"
   }
 }
