--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "html-to-text": "^9.0.5",
+    "openai": "^4.20.0",
+    "sqlite3": "^5.1.6",
     "string-strip-html": "^13.4.3",
     "strip-html": "^1.0.2",
     "striptags": "^3.2.0",
