--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "strip-html": "^1.0.2",
     "striptags": "^3.2.0",
     "updaty": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "prettier": "^3.1.1"
   }
 }
